[project]
name = "go-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
]

[tool.setuptools]
packages = ["metrolinx_api", "utilities", "sql_scripts"]
